--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,5 +1,45 @@
 #imageTest {
   background-image: url('../images/menu.jpeg');
   background-size: cover;
-  /*background-color: red;*/
+}
+
+.text {
+  color: red;
+  font-weight: bold;
+}
+
+#map1, #map2 {
+  width: 100%;
+  height: 400px;
+}
+
+@media screen and (min-width: 768px) {
+  .zoom {
+    transition: transform 0.6;
+  }
+  .zoom:hover {
+    transform: scale(1.5, 1.5);
+    z-index: 20;
+  }
+  #map1, #map2 {
+    width: 400px;
+  }
+}
+
+.bg-wood {
+  background-image: url('../images/wood-texture.jpg');
+  background-size: cover;
+  color: #FDFEB3;
+}
+
+.font-cursive {
+  font-family: 'Pinyon Script', cursive;
+}
+
+.bg-creme {
+  background-color: #FFFADB;
+}
+
+.bg-grey {
+  background-color: rgba(0,0,0,0.2);
 }
