--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3,11 +3,6 @@
   background-size: cover;
 }
 
-.text {
-  color: red;
-  font-weight: bold;
-}
-
 #map1, #map2 {
   width: 100%;
   height: 400px;
@@ -15,7 +10,7 @@
 
 @media screen and (min-width: 768px) {
   .zoom {
-    transition: transform 0.6;
+    transition: transform 0.6s;
   }
   .zoom:hover {
     transform: scale(1.5, 1.5);
