--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,5 +1,5 @@
 #imageTest {
-  background-image: url('../images/menu.jpeg');
+  background-image: url('../images/menu.jpg');
   background-size: cover;
 }
 
